--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/panel_header_4dp"
-        android:layout_marginTop="@dimen/panel_header_4dp"
+        android:layout_marginVertical="@dimen/panel_header_4dp"
         android:layout_marginRight="52dp"
-        android:layout_marginBottom="@dimen/panel_header_4dp"
         android:paddingLeft="12sp"
         android:paddingTop="10sp"
         android:paddingRight="62sp"
