--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,10 +3,14 @@
     <dimen name="primary_text_size_22sp">22sp</dimen>
     <dimen name="around_button_16dp">16dp</dimen>
     <dimen name="icon_padding_8dp">8dp</dimen>
+    <dimen name="icon_padding_16dp">16dp</dimen>
+    <dimen name="icon_padding_12dp">12dp</dimen>
+    <dimen name="icon_padding_top_22dp">22dp</dimen>
+    <dimen name="icon_padding_bottom_21dp">21dp</dimen>
     <dimen name="panel_header_4dp">4dp</dimen>
 
     <dimen name="settings_text_size_16sp">16sp</dimen>
-    <dimen name="text_left_16dp">16dp</dimen>
-    <dimen name="text_top_21dp">21dp</dimen>
+    <dimen name="text_left_16sp">16sp</dimen>
+    <dimen name="text_top_21sp">21sp</dimen>
 
 </resources>
