--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,16 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/panel_header_4dp"
-        android:layout_marginTop="@dimen/panel_header_4dp"
+        android:layout_marginVertical="@dimen/panel_header_4dp"
         android:layout_marginRight="52dp"
-        android:layout_marginBottom="@dimen/panel_header_4dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:padding="16dp"
+            android:padding="@dimen/icon_padding_16dp"
             android:src="@drawable/vector"
             app:iconTint="@color/black" />
 
@@ -32,7 +31,7 @@
             android:paddingBottom="12sp"
             android:text="@string/settings"
             android:textColor="@color/black"
-            android:textSize="22sp" />
+            android:textSize="@dimen/primary_text_size_22sp" />
     </LinearLayout>
 
     <FrameLayout
@@ -43,22 +42,20 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="@dimen/text_left_16dp"
-            android:paddingTop="@dimen/text_top_21dp"
-            android:paddingBottom="@dimen/text_top_21dp"
+            android:paddingStart="@dimen/text_left_16sp"
+            android:paddingVertical="@dimen/text_top_21sp"
             android:text="@string/dark_theme"
             android:textColor="@color/black2"
             android:textSize="@dimen/settings_text_size_16sp" />
 
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/switch_compat"
-            android:layout_width="60dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:checked="false"
-            android:paddingTop="22dp"
-            android:paddingRight="16dp"
-            android:paddingBottom="22dp"
+            android:paddingVertical="@dimen/icon_padding_top_22dp"
+            android:paddingHorizontal="16dp"
             app:showText="false" />
 
     </FrameLayout>
@@ -70,9 +67,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:paddingStart="@dimen/text_left_16dp"
-            android:paddingTop="@dimen/text_top_21dp"
-            android:paddingBottom="@dimen/text_top_21dp"
+            android:paddingStart="@dimen/text_left_16sp"
+            android:paddingVertical="@dimen/text_top_21sp"
             android:text="@string/share_app"
             android:textColor="@color/black2"
             android:textSize="@dimen/settings_text_size_16sp" />
@@ -81,10 +77,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="end"
-            android:paddingLeft="12dp"
-            android:paddingTop="22dp"
-            android:paddingRight="16dp"
-            android:paddingBottom="21dp"
+            android:paddingLeft="@dimen/icon_padding_12dp"
+            android:paddingTop="@dimen/icon_padding_top_22dp"
+            android:paddingRight="@dimen/icon_padding_16dp"
+            android:paddingBottom="@dimen/icon_padding_bottom_21dp"
             android:src="@drawable/share" />
     </FrameLayout>
 
@@ -96,9 +92,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:paddingStart="@dimen/text_left_16dp"
-            android:paddingTop="@dimen/text_top_21dp"
-            android:paddingBottom="@dimen/text_top_21dp"
+            android:paddingStart="@dimen/text_left_16sp"
+            android:paddingVertical="@dimen/text_top_21sp"
             android:text="@string/write_to_support"
             android:textColor="@color/black2"
             android:textSize="@dimen/settings_text_size_16sp" />
@@ -108,9 +103,9 @@
             android:layout_height="match_parent"
             android:layout_gravity="end"
             android:paddingLeft="10dp"
-            android:paddingTop="21.5dp"
+            android:paddingTop="@dimen/icon_padding_top_22dp"
             android:paddingRight="14dp"
-            android:paddingBottom="20.5dp"
+            android:paddingBottom="20dp"
             android:src="@drawable/group" />
     </FrameLayout>
 
@@ -121,9 +116,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:paddingStart="@dimen/text_left_16dp"
-            android:paddingTop="@dimen/text_top_21dp"
-            android:paddingBottom="@dimen/text_top_21dp"
+            android:paddingStart="@dimen/text_left_16sp"
+            android:paddingVertical="@dimen/text_top_21sp"
             android:text="@string/terms_of_use"
             android:textColor="@color/black2"
             android:textSize="@dimen/settings_text_size_16sp" />
@@ -132,7 +126,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="end"
-            android:paddingLeft="16dp"
+            android:paddingLeft="@dimen/icon_padding_16dp"
             android:paddingTop="24dp"
             android:paddingRight="20dp"
             android:paddingBottom="23dp"
