--- a/app/src/main/res/layout/activity_library.xml
+++ b/app/src/main/res/layout/activity_library.xml
@@ -8,11 +8,7 @@
 
     <TextView
         android:id="@+id/message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
+        style="@style/TextOfPreviewActivityStyle"
         android:text="@string/media_library"/>
-
 
 </FrameLayout>
