--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.PlaylistMaker" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.PlaylistMaker" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimary">@color/black</item>/>
+        <item name="colorSecondary">@color/black</item>/>
+        <item name="colorOnPrimary">@color/white</item>/>
+        <item name="colorOnSecondary">@color/white</item>/>
+        <item name="colorSwitchThumbNormal">@color/blue</item>/>
+        <item name="colorPrimaryVariant">@color/black</item>
+        <item name="colorSecondaryVariant">@color/YP_Blue_Light</item>/>
+    </style>
+    <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker">
+
     </style>
 </resources>
