--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="white">#ffffff</color>
     <color name="black">#1A1B22</color>
     <color name="black2">#000000</color>
+    <color name="YP_Text_Gray">#AEAFB4</color>
+    <color name="YP_Light_Gray">#E6E8EB</color>
+    <color name="YP_Blue_Light">#9FBBF3</color>
 </resources>
