--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,9 +8,9 @@
     <dimen name="icon_padding_top_22dp">22dp</dimen>
     <dimen name="icon_padding_bottom_21dp">21dp</dimen>
     <dimen name="panel_header_4dp">4dp</dimen>
-
-    <dimen name="settings_text_size_16sp">16sp</dimen>
-    <dimen name="text_left_16sp">16sp</dimen>
+    <dimen name="panel_header_52dp">52dp</dimen>
+    <dimen name="text_left_16dp">16dp</dimen>
+    <dimen name="text_size_16sp">16sp</dimen>
     <dimen name="text_top_21sp">21sp</dimen>
 
 </resources>
