--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.PlaylistMaker" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.PlaylistMaker" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/white</item>/>
+        <item name="colorSecondary">@color/blue</item>/>
+        <item name="colorOnPrimary">@color/black</item>/>
+        <item name="colorOnSecondary">@color/YP_Text_Gray</item>/>
+        <item name="colorSwitchThumbNormal">@color/YP_Text_Gray</item>/>
+        <item name="colorPrimaryVariant">@color/YP_Text_Gray</item>
+        <item name="colorSecondaryVariant">@color/YP_Light_Gray</item>/>
     </style>
 
-    <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker" />
+    <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker">
+
+    </style>
 </resources>
