--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -9,6 +9,8 @@
         <item name="colorSwitchThumbNormal">@color/blue</item>/>
         <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorSecondaryVariant">@color/YP_Blue_Light</item>/>
+
+        <item name="colorAccent">@color/blue</item>
     </style>
     <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker">
 
