--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
 
     <style name="ButtonsOfMainActivityStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_height">@dimen/size_0dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:foreground">?attr/selectableItemBackground</item>
@@ -35,6 +35,19 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_gravity">end</item>
         <item name="tint">?attr/colorOnSecondary</item>
+    </style>
+
+    <style name="IconArrowStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_gravity">end</item>
+        <item name="tint">?attr/colorOnSecondary</item>
+        <item name="android:paddingLeft">@dimen/icon_padding_16dp</item>
+        <item name="android:paddingTop">@dimen/icon_padding_24dp</item>
+        <item name="android:paddingRight">@dimen/icon_padding_20dp</item>
+        <item name="android:paddingBottom">@dimen/icon_padding_23dp</item>
+        <item name="android:src">@drawable/arrow</item>
+
     </style>
 
     <style name="LayoutOfPanelHeader">
@@ -71,5 +84,12 @@
         <item name="android:src">@drawable/vector</item>
         <item name="android:padding">@dimen/icon_padding_16dp</item>
         <item name="tint">?attr/colorOnPrimary</item>
+    </style>
+
+    <style name="TextOfArtistAndTime">
+        <item name="android:textColor">?attr/colorOnSecondary</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
     </style>
 </resources>
