--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,6 +9,8 @@
         <item name="colorSwitchThumbNormal">@color/YP_Text_Gray</item>/>
         <item name="colorPrimaryVariant">@color/YP_Text_Gray</item>
         <item name="colorSecondaryVariant">@color/YP_Light_Gray</item>/>
+
+        <item name="colorAccent">@color/blue</item>
     </style>
 
     <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker">
