--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -26,7 +26,7 @@
         android:layout_marginBottom="@dimen/around_button_16dp">
 
         <EditText
-            android:id="@+id/inputEditText"
+            android:id="@+id/query"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
@@ -44,7 +44,9 @@
             android:textColor="@color/black"
             android:textColorHint="?attr/colorPrimaryVariant"
             android:textFontWeight="400"
-            android:textSize="@dimen/text_size_16sp" />
+            android:textSize="@dimen/text_size_16sp"
+            android:imeOptions="actionDone"
+            android:singleLine="true"/>
 
         <ImageView
             android:id="@+id/clearIcon"
@@ -66,7 +68,18 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
-
     </androidx.recyclerview.widget.RecyclerView>
+
+    <TextView
+        android:id="@+id/placeholder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginBottom="434dp"
+        android:textColor="?attr/colorOnPrimary"
+        android:gravity="center"
+        android:textSize="19sp"
+        android:textFontWeight="400"
+        android:fontFamily="@font/ys_display_medium" />
 
 </LinearLayout>
