--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -70,16 +70,39 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
     </androidx.recyclerview.widget.RecyclerView>
 
+    <ImageView
+        android:id="@+id/placeholderImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="102dp" />
+
     <TextView
-        android:id="@+id/placeholder"
+        android:id="@+id/placeholderMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
-        android:layout_marginBottom="434dp"
+        android:layout_marginTop="16dp"
         android:textColor="?attr/colorOnPrimary"
         android:gravity="center"
         android:textSize="19sp"
         android:textFontWeight="400"
         android:fontFamily="@font/ys_display_medium" />
+
+    <Button
+        android:id="@+id/updateButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_gravity="center"
+        android:text="@string/update"
+        android:backgroundTint = "?attr/colorOnPrimary"
+        app:cornerRadius ="54dp"
+        android:textColor="?attr/colorPrimary"
+        android:textSize="14sp"
+        android:textFontWeight="500"
+        android:fontFamily = "@font/ys_display_medium"
+        android:textAllCaps = "false"
+        android:visibility="gone"/>
 
 </LinearLayout>
