--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,12 +2,13 @@
 <resources>
     <dimen name="primary_text_size_22sp">22sp</dimen>
     <dimen name="around_button_16dp">16dp</dimen>
-    <dimen name="icon_padding_8dp">8dp</dimen>
-    <dimen name="icon_padding_16dp">16dp</dimen>
+    <dimen name="padding_6dp">6dp</dimen>
+    <dimen name="padding_8dp">8dp</dimen>
+    <dimen name="padding_12dp">12dp</dimen>
+    <dimen name="padding_16dp">16dp</dimen>
     <dimen name="icon_padding_20dp">20dp</dimen>
     <dimen name="icon_padding_23dp">23dp</dimen>
     <dimen name="icon_padding_24dp">24dp</dimen>
-    <dimen name="icon_padding_12dp">12dp</dimen>
     <dimen name="icon_padding_top_22dp">22dp</dimen>
     <dimen name="icon_padding_bottom_21dp">21dp</dimen>
     <dimen name="panel_header_4dp">4dp</dimen>
@@ -17,6 +18,7 @@
     <dimen name="text_top_21sp">21sp</dimen>
     <dimen name="margin_text_14dp">14dp</dimen>
     <dimen name="margin_8dp">8dp</dimen>
+    <dimen name="margin_24dp">24dp</dimen>
     <dimen name="size_0dp">0dp</dimen>
     <dimen name="image_size_45dp">45dp</dimen>
 
