--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,7 +12,7 @@
         <item name="android:textSize">@dimen/primary_text_size_22sp</item>
         <item name="cornerRadius">@dimen/around_button_16dp</item>
         <item name="iconGravity">textStart</item>
-        <item name="iconPadding">@dimen/icon_padding_8dp</item>
+        <item name="iconPadding">@dimen/padding_8dp</item>
         <item name="iconTint">@color/black</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">500</item>
@@ -42,7 +42,7 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_gravity">end</item>
         <item name="tint">?attr/colorOnSecondary</item>
-        <item name="android:paddingLeft">@dimen/icon_padding_16dp</item>
+        <item name="android:paddingLeft">@dimen/padding_16dp</item>
         <item name="android:paddingTop">@dimen/icon_padding_24dp</item>
         <item name="android:paddingRight">@dimen/icon_padding_20dp</item>
         <item name="android:paddingBottom">@dimen/icon_padding_23dp</item>
@@ -82,7 +82,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:src">@drawable/vector</item>
-        <item name="android:padding">@dimen/icon_padding_16dp</item>
+        <item name="android:padding">@dimen/padding_16dp</item>
         <item name="tint">?attr/colorOnPrimary</item>
     </style>
 
@@ -91,5 +91,18 @@
         <item name="android:textSize">11sp</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textFontWeight">400</item>
+    </style>
+
+    <style name="ButtonsOfSearchActivityStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="android:paddingVertical">@dimen/padding_6dp</item>
+        <item name="paddingStart">@dimen/padding_8dp</item>
+        <item name="paddingEnd">@dimen/padding_6dp</item>
+        <item name="android:backgroundTint">?attr/colorOnPrimary</item>
+        <item name="android:textColor">?attr/colorPrimary</item>
+        <item name="android:textSize">14sp</item>
+        <item name="cornerRadius">54dp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textFontWeight">500</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 </resources>
