--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -14,7 +14,12 @@
             style="@style/ImageViewBackStyle" />
 
         <TextView
-            style="@style/TextOfPanelHeaderStyle"
+            style="@style/TextMedium22"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/padding_12dp"
+            android:paddingTop="@dimen/padding_10dp"
+            android:paddingBottom="@dimen/padding_12dp"
             android:paddingRight="86sp"
             android:text="@string/settings" />
     </LinearLayout>
