--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="around_button_16dp">16dp</dimen>
     <dimen name="padding_6dp">6dp</dimen>
     <dimen name="padding_8dp">8dp</dimen>
+    <dimen name="padding_10dp">10dp</dimen>
     <dimen name="padding_12dp">12dp</dimen>
     <dimen name="padding_16dp">16dp</dimen>
     <dimen name="icon_padding_20dp">20dp</dimen>
@@ -18,6 +19,7 @@
     <dimen name="text_top_21sp">21sp</dimen>
     <dimen name="margin_text_14dp">14dp</dimen>
     <dimen name="margin_8dp">8dp</dimen>
+    <dimen name="margin_16dp">16dp</dimen>
     <dimen name="margin_24dp">24dp</dimen>
     <dimen name="size_0dp">0dp</dimen>
     <dimen name="image_size_45dp">45dp</dimen>
