Sprint13_2 Логика экрана плеера

--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -184,7 +184,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="39dp"
-        android:layout_marginEnd="@dimen/margin_16dp"
+        android:layout_marginHorizontal="@dimen/margin_16dp"
         tools:text="0:00"
         android:textColor="?attr/colorOnPrimary"
         app:layout_constraintBaseline_toBaselineOf="@id/time"
@@ -195,8 +195,8 @@
         style="@style/TextRegular13"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_16dp"
-        android:layout_marginEnd="@dimen/margin_16dp"
         android:gravity="end"
         android:ellipsize="end"
         android:lines="1"
@@ -212,7 +212,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_16dp"
-        android:layout_marginEnd="@dimen/margin_16dp"
+        android:layout_marginHorizontal="@dimen/margin_16dp"
         android:gravity="end"
         android:ellipsize="end"
         android:lines="1"
@@ -228,7 +228,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_16dp"
-        android:layout_marginEnd="@dimen/margin_16dp"
+        android:layout_marginHorizontal="@dimen/margin_16dp"
         android:gravity="end"
         android:ellipsize="end"
         android:lines="1"
@@ -245,7 +245,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_16dp"
         android:layout_marginBottom="28dp"
-        android:layout_marginEnd="@dimen/margin_16dp"
+        android:layout_marginHorizontal="@dimen/margin_16dp"
         android:gravity="end"
         android:ellipsize="end"
         android:lines="1"
