--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -44,6 +44,8 @@
         android:id="@+id/trackName"
         style="@style/TextMedium22"
         android:layout_width="0dp"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_24dp"
         app:layout_constraintBottom_toTopOf="@id/artistName"
