--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -62,7 +62,7 @@
         android:fontFamily="@font/ys_display_medium"
         android:textColor="?attr/colorOnPrimary"
         android:textFontWeight="400"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_14sp"
         app:layout_constraintBottom_toTopOf="@id/playButton"
         app:layout_constraintEnd_toEndOf="@id/rightBorder"
         app:layout_constraintStart_toEndOf="@id/leftBorder"
@@ -71,8 +71,8 @@
 
     <ImageButton
         android:id="@+id/playButton"
-        android:layout_width="84dp"
-        android:layout_height="84dp"
+        android:layout_width="@dimen/image_size_84dp"
+        android:layout_height="@dimen/image_size_84dp"
         android:layout_marginTop="38dp"
 
         app:layout_constraintTop_toBottomOf="@id/artistName"
@@ -82,8 +82,8 @@
 
     <ImageButton
         android:id="@+id/addButton"
-        android:layout_width="51dp"
-        android:layout_height="51dp"
+        android:layout_width="@dimen/image_size_51dp"
+        android:layout_height="@dimen/image_size_51dp"
         android:background="@drawable/add_button"
         app:layout_constraintTop_toTopOf="@id/playButton"
         app:layout_constraintBottom_toBottomOf="@id/playButton"
@@ -91,8 +91,8 @@
 
     <ImageButton
         android:id="@+id/like_button"
-        android:layout_width="51dp"
-        android:layout_height="51dp"
+        android:layout_width="@dimen/image_size_51dp"
+        android:layout_height="@dimen/image_size_51dp"
         android:background="@drawable/like_button"
         app:layout_constraintTop_toTopOf="@id/playButton"
         app:layout_constraintBottom_toBottomOf="@id/playButton"
@@ -102,11 +102,11 @@
         android:id="@+id/playTime"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/margin_8dp"
         tools:text = "0:00"
         android:gravity="center"
         android:fontFamily="@font/ys_display_medium"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_14sp"
         android:textFontWeight="500"
         android:textColor="?attr/colorOnPrimary"
         app:layout_constraintTop_toBottomOf="@id/playButton"
