--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -34,8 +34,8 @@
             android:id="@+id/query"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginVertical="8dp"
+            android:layout_marginHorizontal="@dimen/margin_16dp"
+            android:layout_marginVertical="@dimen/margin_8dp"
             android:background="@drawable/edittext_round_corners"
             android:drawableLeft="@drawable/search"
             android:drawablePadding="10dp"
@@ -46,7 +46,7 @@
             android:inputType="text"
             android:maxLines="1"
             android:paddingVertical="@dimen/padding_8dp"
-            android:paddingLeft="14dp"
+            android:paddingLeft="@dimen/padding_14dp"
             android:singleLine="true"
             android:textColor="@color/black"
             android:textColorHint="?attr/colorPrimaryVariant"
@@ -58,8 +58,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|center_vertical"
-            android:layout_marginRight="16dp"
-            android:paddingHorizontal="14dp"
+            android:layout_marginRight="@dimen/margin_16dp"
+            android:paddingHorizontal="@dimen/padding_14dp"
             android:paddingVertical="@dimen/padding_12dp"
             android:src="@drawable/clear"
             android:visibility="gone"
@@ -68,8 +68,8 @@
     </FrameLayout>
 
     <ProgressBar android:id="@+id/progressBar"
-        android:layout_width="44dp"
-        android:layout_height="44dp"
+        android:layout_width="@dimen/view_size_44dp"
+        android:layout_height="@dimen/view_size_44dp"
         android:layout_gravity="center"
         android:indeterminateTint="@color/blue"
         android:visibility="gone"/>
@@ -94,8 +94,8 @@
         android:id="@+id/placeholderMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="@dimen/margin_24dp"
+        android:layout_marginTop="@dimen/margin_16dp"
         android:fontFamily="@font/ys_display_medium"
         android:gravity="center"
         android:textColor="?attr/colorOnPrimary"
@@ -127,6 +127,7 @@
         android:layout_marginTop="@dimen/margin_24dp">
 
         <TextView
+            android:id="@+id/youWereLookingFor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_8dp"
