--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="padding_8dp">8dp</dimen>
     <dimen name="padding_10dp">10dp</dimen>
     <dimen name="padding_12dp">12dp</dimen>
+    <dimen name="padding_14dp">14dp</dimen>
     <dimen name="padding_16dp">16dp</dimen>
     <dimen name="icon_padding_20dp">20dp</dimen>
     <dimen name="icon_padding_23dp">23dp</dimen>
@@ -15,6 +16,7 @@
     <dimen name="panel_header_4dp">4dp</dimen>
     <dimen name="panel_header_52dp">52dp</dimen>
     <dimen name="text_left_16dp">16dp</dimen>
+    <dimen name="text_size_14sp">14sp</dimen>
     <dimen name="text_size_16sp">16sp</dimen>
     <dimen name="text_top_21sp">21sp</dimen>
     <dimen name="margin_text_14dp">14dp</dimen>
@@ -23,5 +25,8 @@
     <dimen name="margin_24dp">24dp</dimen>
     <dimen name="size_0dp">0dp</dimen>
     <dimen name="image_size_45dp">45dp</dimen>
+    <dimen name="image_size_51dp">51dp</dimen>
+    <dimen name="image_size_84dp">84dp</dimen>
+    <dimen name="view_size_44dp">44dp</dimen>
 
 </resources>
