--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -94,7 +94,7 @@
         <item name="android:textFontWeight">400</item>
     </style>
 
-    <style name="ButtonsOfSearchActivityStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+    <style name="ButtonsStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:paddingVertical">@dimen/padding_6dp</item>
         <item name="paddingStart">@dimen/padding_8dp</item>
         <item name="paddingEnd">@dimen/padding_6dp</item>
@@ -106,4 +106,19 @@
         <item name="android:textFontWeight">500</item>
         <item name="android:textAllCaps">false</item>
     </style>
+
+    <style name="TextMedium14">
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textFontWeight">500</item>
+    </style>
+
+    <style name="TextMedium19">
+        <item name="android:textSize">19sp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+    </style>
+
+
 </resources>
