--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,28 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorPrimary"
     android:orientation="vertical"
-    android:theme="@style/Theme.PlaylistMaker">
-
-    <LinearLayout style="@style/LayoutOfPanelHeader">
-
-        <ImageView
-            android:id="@+id/back"
-            style="@style/ImageViewBackStyle" />
+    android:theme="@style/Theme.PlaylistMaker"
+    tools:context="com.itproger.playlistmaker.search.ui.SearchFragment">
 
         <TextView
             android:id="@+id/message"
             style="@style/TextMedium22"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/panel_header_4dp"
+            android:layout_marginLeft="@dimen/panel_header_4dp"
+            android:layout_marginRight="@dimen/panel_header_52dp"
             android:paddingLeft="@dimen/padding_12dp"
             android:paddingTop="@dimen/padding_10dp"
             android:paddingBottom="@dimen/padding_12dp"
             android:text="@string/search" />
-    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/container"
