--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,5 +29,6 @@
     <dimen name="image_size_51dp">51dp</dimen>
     <dimen name="image_size_84dp">84dp</dimen>
     <dimen name="view_size_44dp">44dp</dimen>
+    <dimen name="dividerThickness">0.5dp</dimen>
 
 </resources>
